samples/_failures_safe/1761520610_459a86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55d862f9.c: In function ‘main’:
./samples/SAFE/__tmp_55d862f9.c:114:20: error: missing terminating " character
  114 |             printf("Matrix dimensions must
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_55d862f9.c:114:13: error: expected expression at end of input
  114 |             printf("Matrix dimensions must
      |             ^~~~~~
./samples/SAFE/__tmp_55d862f9.c:114:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55d862f9.c:114:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55d862f9.c:114:13: error: expected declaration or statement at end of input
